fix(redis-client): adapt Hash commands to the Quarkus 4 platform
Two adaptations needed after rebasing onto the merged main:

- LettuceHashCommandsConverters used List.getFirst(), a Java 21 API;
  the runtime module compiles with --release 17, so use get(0).
- The integration test used the Vert.x 4 io.vertx.core.impl.VertxInternal
  import and getEventLoopGroup() accessor; Vert.x 5 moved the class to
  io.vertx.core.internal and renamed the accessor to eventLoopGroup(),
  matching the pattern established by the platform-sync migration.

Verified: runtime test-compile clean, LettuceHash* 19/19 green against
a real Redis container, codegen module builds standalone.